FIX: Search icon covered most of the screen

--- a/frontend-html/src/gui/Components/Search/SearchView.module.scss
+++ b/frontend-html/src/gui/Components/Search/SearchView.module.scss
@@ -7,7 +7,7 @@
   align-items: center;
 }
 
-.icon {
+svg.icon {
   width: 18px;
   margin: 8px;
 }
